# poetry-sample

./: LICENSE  README.md
poetry-demo/: pyproject.toml
poetry-demo/poetry_demo/: sample.txt  sample2.txt  setup.py  view_file.py
