[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sophia <sophia.stewart202@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
pydantic = "^1.9.0"
fastapi = {extras = ["all"], version = "^0.75.0"}
black = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_script = "poetry_demo.my_script:hello"
